  * Basic HTTP Authentication (thanks J.D. Mullin)
  * Modified cucumber tests to setup the test database so you no longer need to copy them yourself
  * Support for nullable elements returned from the Data Service (m:null ="true")
* Bug Fixes
  * ActiveSupport 2.3.x (tested 2.3.11) and 3.0.x (tested 3.0.4) are now supported
  * Works with Ruby 1.9.2

=== 0.0.9
* New Features
  * Support for self-signed SSL certificates (thanks J.D. Mullin)
  * Refactored building classes/collections to only make one call to the service
  * Added support for a WCF service with lowercase entities (reported by Klaus Rohe)
* Bug Fixes
  * Fixed issue with passing a service URL with a trailing slash
* Other
  * Cleaned up testing by adding a default task to the Rakefile that runs RSpec and Cucumber

=== 0.0.10
* New Features
  * Added the ability to pass additional parameters that are appended to the query string for requests
  * Added initial support for feed customizations (SyndicationTitle and SyndicationSummary)
  * Enhanced ruby_odata's awareness of classes based on the metadata instead of relying on results that are returned
* Bug Fixes
  * Fixed issues with nested collections (eager loading)
  * Handled ArgumentError on the Time.parse for older versions of Ruby; used DateTime.parse instead if Time.parse fails
  * Removed the camelize method call when building the root URL for collections (Reported by mkoegel, issue #3 on github)
  * Handled building results (classes) where the category element is missing but there is a title element instead. (Reported by mkoegel, issue #3 on github in the comments)
* Other
  * Change HTTP port to 8989 since 8888 conflicts with the Intel AppStore
  * Refactored service step for HTTP calls where the service address is defined within the step making it easier to make changes in the future.

=== 0.1.0
* New Features
  * Added support for single layer inheritance (thanks to http://odetocode.com/Blogs/scott/archive/2010/07/11/odata-and-ruby.aspx)